add index.html file

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                      <!-- Sidebar section -->
                     <div class "sidebar"
-                        <img class "sidebar-img"  src="https://chi01pap001files.storage.live.com/y4mcyEM_I-M9oFqe7A0n34SWv6IXVrtOuj-V2oWc40OwOxffRYTK-hMEdRZVTv3mX8v9gKsBzFzTUhMW-yr_RysIwjRTCosHKQ6bSdfPr_O9nHFcxqsjMn-Iz6nGR0Nl-1iBJyH38ZvvVL-wQP999pFfwkPynLUmuPXE1dHY0TdW6zREvEEeSJ01Dy-jtK-aUgc?width=192&height=256&cropmode=none">
+                        <img class "sidebar-img"  src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/golden-retriever-royalty-free-image-506756303-1560962726.jpg?crop=0.672xw:1.00xh;0.166xw,0&resize=640:*">
     
                      </div>
 
