--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -14,7 +14,7 @@
 			display: block;
 			position: absolute;
 			top: 100px;
-			left: 0px;  /* <--- Change me! */
+			left: 650px;  /* <--- Change me! */
 		}
 		.board{
 			height: 100vh;
@@ -45,6 +45,7 @@
 			
 			// Every time the box is clicked, call the handleBoxClick Function (see below)
 			box.on('click', handleBoxClick);
+			
 
 			// moves the Box to a new position on the screen along the X-Axis
 			function moveBoxTo(newPositionX) {
@@ -61,7 +62,9 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			
+			var positionX = 0;
+			var points = 0;
+			var speed = 10
 
 			
 			/* 
@@ -70,7 +73,18 @@
 			turn it around! 
 			*/
 			function update() {
-				
+				/*Your Code to Increase positionX by 10 HERE*/
+				positionX = positionX + speed;
+			
+				moveBoxTo(positionX);
+
+				changeBoxText(points);
+
+				if (positionX > boardWidth) {
+					speed *= -1;
+				} else if (positionX < 0) {
+					speed *= -1;
+				} 
 
 			};
 
@@ -80,7 +94,15 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
+				positionX = 0;
+				points = points + 1;
 				
+				if (speed > 0) {
+					speed += 3;
+				} else {
+					speed -= 3;
+				}
+
 
 
 			};
